[package]
name = "rust-tls-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
warp = { version = "0.3.6", features = ["tls"] }
json = "0.12"
derive_more = "0.99.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1.0.190"
clap = { version = "4.4.7", features = ["derive"] }
thiserror = "1.0.50"
